--- a/SpassSeite/BilderSprüche.html
+++ b/SpassSeite/BilderSprüche.html
@@ -61,7 +61,62 @@
   </header><!-- End Header -->
 
   <section id="New">
+
+    <!-- Gallery -->
+<div class="row">
+  <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+    <img
+      src="assets/img/lotr.jpg"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt=""
+    />
+
+    <img
+      src="assets/img/meme1.jpg"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt=""
+    />
+  </div>
+
+  <div class="col-lg-4 mb-4 mb-lg-0">
+    <img
+      src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt=""
+    />
+
+    <img
+      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt=""
+    />
+  </div>
+
+  <div class="col-lg-4 mb-4 mb-lg-0">
+    <img
+      src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt=""
+    />
+
+    <img
+      src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt=""
+    />
+  </div>
+</div>
+<!-- Gallery -->
+
     <h1> Hier könnten die Bilder sein </h1>
+    <!--img src="assets/img/lotr.jpg" alt="Mein Bild" class="img" width: 200px >
+    <img src="assets/img/meme1.jpg" alt="..." class="mx-auto d-block" width: 200px>
+    
+      
+      <p>Dieser Text ist neben dem Bild.</p>
+    </div>
+    <p>Dieser Text ist unter dem Bild.</p-->
+
   </section><!-- End Hero Section -->
   <footer id="footer">
     <div class="footer-top">
