Lustige Bilder und Sprüche geändert
Habe die Galerie hinzugefügt, hatte aber Probleme mit der Stylesheet.css

--- a/SpassSeite/BilderSprüche.html
+++ b/SpassSeite/BilderSprüche.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Try</title>
@@ -18,20 +18,16 @@
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: TheEvent - v4.1.0
-  * Template URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -48,7 +44,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="BilderSprüche.html">Lustige Bilder und Sprüche</a></li>
+          <li><a class="nav-link scrollto active" href="BilderSprüche.html">Lustige Bilder und Sprüche </a></li>
           <li><a class="nav-link scrollto" href="Videos.html">Videos</a></li>
           <li><a class="nav-link scrollto" href="Hochladen.html">Hochladen von Sprüchen und Videos</a></li>
           <li><a class="nav-link scrollto" href="Kontakt.html">Kontakt</a></li>
@@ -59,14 +55,15 @@
 
     </div>
   </header><!-- End Header -->
+ 
 
-  <section id="gallery">
-
-    <div class="container" data-aos="fade-up">
+   <!-- verweis auf style.css fehlt -->
+  <main>   
+  <section id="galerie">
+    <div class="new-container" data-aos="fade-up">
       <div class="section-header">
         <!--h2>Gallery</h2-->
-        <p>Memes</p>
-      </div>
+           </div>
     </div>
 
     <div class="gallery-slider swiper-container">
@@ -83,7 +80,7 @@
       <div class="swiper-pagination"></div>
     </div>
 
-  
+  </main>
 <!-- Gallery -->
 
     
