--- a/SpassSeite/BilderSprüche.html
+++ b/SpassSeite/BilderSprüche.html
@@ -31,7 +31,6 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
@@ -52,7 +51,6 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
-
     </div>
   </header><!-- End Header -->
  
@@ -90,8 +88,9 @@
     </div>
     <p>Dieser Text ist unter dem Bild.</p-->
 
-  </section><!-- End Hero Section -->
+  </section>
   </main>
+
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
