--- a/SpassSeite/Kontakt.html
+++ b/SpassSeite/Kontakt.html
@@ -48,10 +48,10 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="BilderSprüche.html">Lustige Bilder und Sprüche</a></li>
+          <li><a class="nav-link scrollto" href="BilderSprüche.html">Lustige Bilder und Sprüche</a></li>
           <li><a class="nav-link scrollto" href="Videos.html">Videos</a></li>
           <li><a class="nav-link scrollto" href="Hochladen.html">Hochladen von Sprüchen und Videos</a></li>
-          <li><a class="nav-link scrollto" href="Kontakt.html">Kontakt</a></li>
+          <li><a class="nav-link scrollto active" href="Kontakt.html">Kontakt</a></li>
           
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
