--- a/SpassSeite/Videos.html
+++ b/SpassSeite/Videos.html
@@ -48,8 +48,8 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="BilderSprüche.html">Lustige Bilder und Sprüche</a></li>
-          <li><a class="nav-link scrollto" href="Videos.html">Videos</a></li>
+          <li><a class="nav-link scrollto" href="BilderSprüche.html">Lustige Bilder und Sprüche</a></li>
+          <li><a class="nav-link scrollto active" href="Videos.html">Videos</a></li>
           <li><a class="nav-link scrollto" href="Hochladen.html">Hochladen von Sprüchen und Videos</a></li>
           <li><a class="nav-link scrollto" href="Kontakt.html">Kontakt</a></li>
           
