Kontakte und Videos aktualisiert.
Habe ein Video in der Startseite eingefügt.
Section Video hinzugefügt.
Section Kotankt hinzugefügt.

--- a/SpassSeite/TRY.html
+++ b/SpassSeite/TRY.html
@@ -68,7 +68,7 @@
       <div class="videoMain-container" data-aos="zoom-in" data-aos-delay="100">
         <h1 class="mb-4 pb-0">The Fail<br><span>OF</span> the day</h1>
         <p class="mb-4 pb-0">Ohne Spaß, kein Fun.</p>
-        <a href="https://www.youtube.com/watch?v=E9gfi1snEms" class="glightbox play-btn mb-4"></a>
+        <a href="assets/img/balls.mp4" class="glightbox play-btn mb-4"></a>
         <a href="Videos.html" class="about-btn scrollto">Für mehr Videos</a>
       </div>
     </section><!-- End Hero Section -->
