--- a/SpassSeite/Kontakt.html
+++ b/SpassSeite/Kontakt.html
@@ -59,8 +59,76 @@
 
     </div>
   </header><!-- End Header -->
-  <section id="New">
-    <h1>    Kontakt über Uns</h1>
+  <h1>test</h1>
+  <section id="contact" class="section-bg">
+    
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-header">
+        <h2>Kontaktiere uns (nicht)</h2>
+        <p>Alle Einsendungen werden geklaut und kopiert.</p>
+      </div>
+
+      <div class="row contact-info">
+
+        <div class="col-md-4">
+          <div class="contact-address">
+            <i class="ion-ios-location-outline"></i>
+            <h3>Address</h3>
+            <address>Solar System 3, Milky Way, Laniakea'</address>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="contact-phone">
+            <i class="ion-ios-telephone-outline"></i>
+            <h3>Phone Number</h3>
+            <p><a href="tel:+155895548855">+1-603-413-4124</a></p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="contact-email">
+            <i class="ion-ios-email-outline"></i>
+            <h3>Email</h3>
+            <p><a href="mailto:PleaseDont@SpamMe.com">PleaseDont@SpamMe.com</a></p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="form">
+        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+              <div class="validate"></div>
+            </div>
+            <div class="form-group col-md-6">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+              <div class="validate"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+            <div class="validate"></div>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+            <div class="validate"></div>
+          </div>
+          <div class="mb-3">
+            <!--div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your message has been sent. Thank you!</div>        funktioniert nicht richtig -> nur als dummy zu gebrauchen
+          </div-->
+          <div class="text-center"><button type="submit">Send Message</button></div>
+        </form>
+      </div>
+
+    </div>
+ 
+    
 </section><!-- End Hero Section -->
 <footer id="footer">
     <div class="footer-top">
