--- a/SpassSeite/Hochladen.html
+++ b/SpassSeite/Hochladen.html
@@ -59,23 +59,27 @@
 
     </div>
   </header><!-- End Header -->
-  <section id="New">
 
-    <h1>    Hochlade funktion</h1>
-    <!-- Ab HTML5 -->
-<form id="formularid">
-</form>
 
-<form id="uploadform" method="post" enctype="multipart/form-data">	
-	<input id="files" type="file" name="files[]" multiple>
-	<input type="submit" value="Upload File" name="submit">
-</form>
+<section id="New">  <!-- Sektion New -->
 
-<div class="filelist"></div>
-<div id="result"></div>
+  <h1>    Hochlade funktion</h1>
+  <!-- Ab HTML5 -->
+  <form id="formularid">
+  </form>
 
-<script src="assets/css/simple-upload.js"></script>
-</section><!-- End Hero Section -->
+  <form id="uploadform" method="post" enctype="multipart/form-data">	
+    <input id="files" type="file" name="files[]" multiple>
+    <input type="submit" value="Upload File" name="submit">
+  </form>
+
+  <div class="filelist"></div>
+  <div id="result"></div>
+
+  <script src="assets/js/simple-upload.js"></script>
+</section><!-- End New Section -->
+
+
 <footer id="footer">
     <div class="footer-top">
       <div class="container">
@@ -119,5 +123,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  
 </body>
 </html>
