--- a/SpassSeite/Kontakt.html
+++ b/SpassSeite/Kontakt.html
@@ -38,7 +38,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
-    <div class="container-fluid container-xxl d-flex align-items-center">
+    <div class="container container-xxl d-flex align-items-center">
 
       <div id="logo" class="me-auto">
         <!-- Uncomment below if you prefer to use a text logo -->
@@ -59,7 +59,9 @@
 
     </div>
   </header><!-- End Header -->
-  <h1>test</h1>
+
+ <section id="New">
+  <h1><br></h1>
   <section id="contact" class="section-bg">
     
     <div class="container" data-aos="fade-up">
@@ -117,7 +119,7 @@
             <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
             <div class="validate"></div>
           </div>
-          <div class="mb-3">
+          <div class="mb-3"></div>    <!-- div war nicht geschlossen, hat aber nix mit dem Fehler zu tun.  -->
             <!--div class="loading">Loading</div>
             <div class="error-message"></div>
             <div class="sent-message">Your message has been sent. Thank you!</div>        funktioniert nicht richtig -> nur als dummy zu gebrauchen
@@ -129,7 +131,8 @@
     </div>
  
     
-</section><!-- End Hero Section -->
+  </section><!-- End Hero Section -->
+</section>
 <footer id="footer">
     <div class="footer-top">
       <div class="container">
