--- a/SpassSeite/BilderSprüche.html
+++ b/SpassSeite/BilderSprüche.html
@@ -39,7 +39,7 @@
       <div id="logo" class="me-auto">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-        <a href="TRY.html" class="scrollto"><img src="assets/img/logo.png" alt="" title=""></a>
+        <a href="TRY.html" class="scrollto"><img src="assets/img/gallery/logo.png" alt="" title=""></a>
       </div>
 
 
@@ -68,14 +68,14 @@
 
     <div class="gallery-slider swiper-container">
       <div class="swiper-wrapper align-items-center">
-        <div class="swiper-slide"><a href="assets/img/lotr.jpg" class="gallery-lightbox"><img src="assets/img/lotr.jpg" class="img-fluid" alt=""></a></div>
-        <div class="swiper-slide"><a href="assets/img/meme1.jpg" class="gallery-lightbox"><img src="assets/img/meme1.jpg" class="img-fluid" alt=""></a></div>
-        <div class="swiper-slide"><a href="assets/img/meme2.jpg" class="gallery-lightbox"><img src="assets/img/meme2.jpg" class="img-fluid" alt=""></a></div>
-        <div class="swiper-slide"><a href="assets/img/meme3.jpg" class="gallery-lightbox"><img src="assets/img/meme3.jpg" class="img-fluid" alt=""></a></div>
-        <div class="swiper-slide"><a href="assets/img/meme4.jpg" class="gallery-lightbox"><img src="assets/img/meme4.jpg" class="img-fluid" alt=""></a></div>
-        <div class="swiper-slide"><a href="assets/img/meme5.jpg" class="gallery-lightbox"><img src="assets/img/meme5.jpg" class="img-fluid" alt=""></a></div>
-        <div class="swiper-slide"><a href="assets/img/meme6.jpg" class="gallery-lightbox"><img src="assets/img/meme6.jpg" class="img-fluid" alt=""></a></div>
-        <div class="swiper-slide"><a href="assets/img/meme7.jpg" class="gallery-lightbox"><img src="assets/img/meme7.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/lotr.jpg" class="gallery-lightbox"><img src="assets/img/gallery/lotr.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/meme1.jpg" class="gallery-lightbox"><img src="assets/img/gallery/meme1.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/meme2.jpg" class="gallery-lightbox"><img src="assets/img/gallery/meme2.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/meme3.jpg" class="gallery-lightbox"><img src="assets/img/gallery/meme3.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/meme4.jpg" class="gallery-lightbox"><img src="assets/img/gallery/meme4.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/meme5.jpg" class="gallery-lightbox"><img src="assets/img/gallery/meme5.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/meme6.jpg" class="gallery-lightbox"><img src="assets/img/gallery/meme6.jpg" class="img-fluid" alt=""></a></div>
+        <div class="swiper-slide"><a href="assets/img/gallery/meme7.jpg" class="gallery-lightbox"><img src="assets/img/gallery/meme7.jpg" class="img-fluid" alt=""></a></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
@@ -101,7 +101,7 @@
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="fun_text-text">
-              <h3>Sitzen 2 Leichen auf dem Dach.<br>Fählt eine runter sind beide<br>tod.</h3>
+              <h3>Sitzen 2 Leichen auf dem Dach.<br>Fählt eine runter sind, beide tod.</h3>
             </div>
           </div>
 
@@ -160,7 +160,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="assets/img/logo.png" alt="TheEvenet">
+            <img src="assets/img/gallery/logo.png" >
             <p>LachDichSchlapp.at wurde für ein Schulprojekt erstellt. Es soll eine Lustige Witze und Video Sammlung werden.</p>
           </div>
 
