--- a/SpassSeite/Videos.html
+++ b/SpassSeite/Videos.html
@@ -43,7 +43,7 @@
       <div id="logo" class="me-auto">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-        <a href="TRY.html" class="scrollto"><img src="assets/img/logo.png" alt="" title=""></a>
+        <a href="TRY.html" class="scrollto"><img src="assets/img/gallery/logo.png" alt="" title=""></a>
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -69,37 +69,37 @@
             <h3 class="text-center">Video Section</h3>
             <div class="row pb-row">
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Monkey vs Cat.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Video/Monkey vs Cat.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Monkey vs Cat</label>
                 </div>
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Jack Black.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Video/Jack Black.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Jack Black Superhero</label>
                 </div>
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame " width="100%" height="230" src="assets/img/driller.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame " width="100%" height="230" src="assets/img/Video/driller.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Electric drill</label>
                 </div>
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/child.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Video/child.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Rollerblade</label>
                 </div>
             </div>
             <div class="row pb-row">
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/blitzer.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Video/blitzer.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Blitzer</label>
                 </div>
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/TopGear.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Video/TopGear.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Top Gear</label>
                 </div>
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/KickingKids.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Video/KickingKids.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Kicking Kids</label>
                 </div>
                 <div class="col-md-3 pb-video">
-                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/ofen.mp4" frameborder="0" allowfullscreen></iframe>
+                    <iframe class="pb-video-frame" width="100%" height="230" src="assets/img/Video/ofen.mp4" frameborder="0" allowfullscreen></iframe>
                     <label class="form-control label-warning text-center">Bad day</label>
                 </div>
             </div>
@@ -109,7 +109,7 @@
     <style>
         .pb-video-container {
             padding-top: 50px;
-            background: url(../img/Smiley.jpg) top center;
+            background: url(../img/gallery/Smiley.jpg) top center;
             font-family: Lato;
         }
     
@@ -144,7 +144,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="assets/img/logo.png" alt="TheEvenet">
+            <img src="assets/img/gallery/logo.png">
             <p>LachDichSchlapp.at wurde für ein Schulprojekt erstellt. Es soll eine Lustige Witze und Video Sammlung werden.</p>
           </div>
 
