--- a/SpassSeite/Kontakt.html
+++ b/SpassSeite/Kontakt.html
@@ -43,7 +43,7 @@
       <div id="logo" class="me-auto">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-        <a href="TRY.html" class="scrollto"><img src="assets/img/logo.png" alt="" title=""></a>
+        <a href="TRY.html" class="scrollto"><img src="assets/img/gallery/logo.png" alt="" title=""></a>
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -139,7 +139,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="assets/img/logo.png" alt="TheEvenet">
+            <img src="assets/img/gallery/logo.png">
             <p>LachDichSchlapp.at wurde für ein Schulprojekt erstellt. Es soll eine Lustige Witze und Video Sammlung werden.</p>
           </div>
 
