--- a/SpassSeite/TRY.html
+++ b/SpassSeite/TRY.html
@@ -88,7 +88,7 @@
   
             <div class="col-lg-3 col-md-6 footer-info">
               <img src="assets/img/gallery/logo.png" >
-              <p>LachDichSchlapp.at wurde für ein Schulprojekt erstellt. Es soll eine Lustige Witze und Video Sammlung werden.</p>
+              <p>LachDichSchlapp.at wurde für ein Schulprojekt erstellt. Es soll eine lustige Witze und Video Sammlung werden.</p>
             </div>
   
            
